# Mambabot

./: README.md
Hardware/: README.md
Requirement/: README.md
Revision_History/: Revision_History.xls
Software/Descriptions/Revision_History/: .~lock.Revision_History.xls#  Revision_History.xls
Software/Descriptions/Test/ROS/: README.md
Software/Descriptions/Test/ROS/ros_test/: CMakeLists.txt  package.xml
Software/cpu_sw/: README.md
Software/cpu_sw/ROS_Packages/: README.md
Software/cpu_sw/ROS_Packages/mambabot_msgs/: CMakeLists.txt  README.md  package.xml
Software/cpu_sw/ROS_Packages/mambabot_msgs/msg/: Diagnostic.msg  General.msg  LogisticData.msg  PID.msg  ProjectInfo.msg
Software/cpu_sw/ROS_Packages/rosserial_stm32/: history.md
Software/cpu_sw/ROS_Packages/teleop_twist_keyboard/: history.md
Software/cpu_sw/ROS_Packages/teleop_twist_keyboard/launch/: keyboard.launch
Software/mc_sw/: Makefile
Software/mc_sw/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c  stm32f4xx_hal_tim.c  stm32f4xx_hal_uart.c
Software/mc_sw/appl/det/inc/: det.h
Software/mc_sw/appl/det/src/: det.c
Software/mc_sw/appl/src/: main.c
Software/mc_sw/config/: FreeRTOSConfig.h
Software/mc_sw/core/inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
Software/mc_sw/core/src/: stm32f4xx_hal_msp.c  stm32f4xx_it.c
Software/mc_sw/project_make/: main.mak
Software/mc_sw/ros_lib/: STM32Hardware.h
Software/mc_sw/ros_lib/mambabot_msgs/: Diagnostic.h  General.h  LogisticData.h  PID.h  ProjectInfo.h  Velocity.h
Software/mc_sw/startup/: startup_stm32.s
Software/soc_sw/: README.md
(+29 files in other folders)
